--- a/UI-MVC.Tests/UI-MVC.Tests.csproj
+++ b/UI-MVC.Tests/UI-MVC.Tests.csproj
@@ -131,7 +131,6 @@
   <ItemGroup>
     <Compile Include="Controllers\PlaylistControllerTest.cs" />
     <Compile Include="Controllers\OrganisationsControllerTest.cs" />
-    <Compile Include="Controllers\WebApi\UserControllerTest.cs" />
     <Compile Include="Helpers\DbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
@@ -155,6 +154,9 @@
       <Project>{6F43CFE1-78E6-4E86-83AA-9A121A92188A}</Project>
       <Name>UI-MVC</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\WebApi\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
