--- a/UI-MVC/UI-MVC.csproj
+++ b/UI-MVC/UI-MVC.csproj
@@ -257,10 +257,16 @@
     <Content Include="Content\bootstrap-grid.min.css">
       <DependentUpon>bootstrap-grid.css</DependentUpon>
     </Content>
-    <Content Include="Content\img\banner.jpg" />
     <Content Include="Content\img\avatar.png" />
+    <Content Include="Content\img\Beadbuddy_header.mp4" />
+    <Content Include="Content\img\ignace.jpg" />
+    <Content Include="Content\img\jonah.jpg" />
+    <Content Include="Content\img\kelly.jpg" />
+    <Content Include="Content\img\lennart.jpg" />
     <Content Include="Content\img\logo_header.png" />
     <Content Include="Content\img\logo_small.png" />
+    <Content Include="Content\img\maarten.jpg" />
+    <Content Include="Content\img\matthias.jpg" />
     <Content Include="Content\img\party-dj.png" />
     <Content Include="Content\img\round_shape_loader.gif" />
     <Content Include="Content\modal.css" />
