--- a/BL.Tests/packages.config
+++ b/BL.Tests/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
 </packages>
