--- a/UI-MVC.Tests/packages.config
+++ b/UI-MVC.Tests/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Web.Administration" version="7.0.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
