--- a/UI-MVC/packages.config
+++ b/UI-MVC/packages.config
@@ -47,4 +47,5 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
+  <package id="YoutubeExtractor" version="0.10.10" targetFramework="net452" />
 </packages>
