--- a/UI-MVC.Tests/packages.config
+++ b/UI-MVC.Tests/packages.config
@@ -28,6 +28,7 @@
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Selenium.Support" version="2.52.0" targetFramework="net452" />
   <package id="Selenium.WebDriver" version="2.52.0" targetFramework="net452" />
   <package id="WebDriver.ChromeDriver.win32" version="2.21.0.0" targetFramework="net452" />
 </packages>
