--- a/UI-MVC/packages.config
+++ b/UI-MVC/packages.config
@@ -46,6 +46,7 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="VideoLibrary" version="1.3.3" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
   <package id="YoutubeExtractor" version="0.10.10" targetFramework="net452" />
 </packages>
