--- a/UI-MVC/packages.config
+++ b/UI-MVC/packages.config
@@ -52,8 +52,9 @@
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net452" />
-  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
+  <package id="Unity.WebAPI" version="5.2.3" targetFramework="net452" />
   <package id="VideoLibrary" version="1.3.3" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
   <package id="YoutubeExtractor" version="0.10.10" targetFramework="net452" />
 </packages>
