--- a/UI-MVC/Web.config
+++ b/UI-MVC/Web.config
@@ -9,8 +9,8 @@
         <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </configSections>
     <connectionStrings>
-        <add name="BeatBuddy" connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=teamd;Password=Integratieproject2" providerName="System.Data.SqlClient" />
-        <add name="BeatBuddyTest" connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2" providerName="System.Data.SqlClient" />
+        <add name="BeatBuddy" connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddy;Persist Security Info=True;User ID=teamd;Password=Integratieproject2;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
+        <add name="BeatBuddyTest" connectionString="Data Source=www.mavamaarten.be\SQLSERVER2012;Initial Catalog=beatbuddyTest;Persist Security Info=True;User ID=teamd;Password=Integratieproject2;MultipleActiveResultSets=true" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <appSettings>
         <add key="webpages:Version" value="3.0.0.0" />
@@ -72,7 +72,7 @@
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-                <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+                <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
@@ -89,6 +89,18 @@
             <dependentAssembly>
                 <assemblyIdentity name="System.Net.Http.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-4.2.29.0" newVersion="4.2.29.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Microsoft.AI.Agent.Intercept" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.2.1.0" newVersion="1.2.1.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
